# MeowHub

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_CN.md  build.gradle.kts  gradle.properties  local_socket.md  secrets.properties.example  settings.gradle.kts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_submission.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: meowhub-mcp-server.js  meowhub-node-host.js  openclaw-node-modules.tar.xz  scrcpy-server
app/src/main/assets/debs/: libarchive_3.8.5_aarch64.deb  libcompiler-rt_21.1.8-2_aarch64.deb  libllvm_21.1.8-2_aarch64.deb  libuv_1.52.0_aarch64.deb  ndk-sysroot_29-2_aarch64.deb  nodejs-lts_24.13.0-1_aarch64.deb  npm_11.11.0_all.deb  rhash_1.4.6-1_aarch64.deb
app/src/main/assets/meowhub-workspace/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
app/src/main/jni/: CMakeLists.txt  adb_pairing.cpp
debs/: c-ares_1.34.6_aarch64.deb  clang_21.1.8-2_aarch64.deb  cmake_4.2.3-1_aarch64.deb  git_2.53.0_aarch64.deb  jsoncpp_1.9.6-2_aarch64.deb  libsqlite_3.51.2_aarch64.deb  lld_21.1.8-2_aarch64.deb  llvm_21.1.8-2_aarch64.deb
docs/: README.md  adb-protocol.md  local-socket-guide.md  meowclaw-integration-guide.md  openclaw-node-host.md  release-v1-alpha.md  release-v1.1.0.md  skill-development-guide.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
skills/: README.md  add-wechat-friend.json  browse-tiktok.json  browse-xiaohongshu.json  check-weather.json  daily-news.json  eye-comfort.json  meituan-food.json  phone-health-check.json  photo-cleanup.json  screen-translate.json  set-alarm.json  sms-summary.json  storage-cleanup.json  taobao-search.json  tiktok-drama-skip-ad.json  wechat-auto-reply.json  wechat-check-messages.json  wechat-moments-auto-like.json  wifi-diagnose.json
skills/meowhub-browser/: SKILL.md
terminal-emulator/: build.gradle
terminal-view/: build.gradle
termux-shared/: build.gradle
(+149 files in other folders)
